--- a/Classes/LinphoneUI/en.lproj/UICallBar.xib
+++ b/Classes/LinphoneUI/en.lproj/UICallBar.xib
@@ -52,7 +52,7 @@
                     <color key="backgroundColor" red="0.0" green="1" blue="0.19194547549999999" alpha="1" colorSpace="calibratedRGB"/>
                 </view>
                 <view tag="1" contentMode="scaleToFill" id="31" userLabel="padView">
-                    <rect key="frame" x="20" y="57" width="281" height="260"/>
+                    <rect key="frame" x="20" y="81" width="281" height="260"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" tag="2" contentMode="scaleToFill" image="dialer_alt_background.png" id="99" userLabel="background">
@@ -183,7 +183,7 @@
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </view>
-                <view tag="33" contentMode="scaleToFill" id="167" userLabel="routesView">
+                <view hidden="YES" tag="33" contentMode="scaleToFill" id="167" userLabel="routesView">
                     <rect key="frame" x="160" y="156" width="80" height="185"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
@@ -253,7 +253,7 @@
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </view>
-                <view tag="15" contentMode="scaleToFill" id="87" userLabel="optionsView">
+                <view hidden="YES" tag="15" contentMode="scaleToFill" id="87" userLabel="optionsView">
                     <rect key="frame" x="240" y="208" width="80" height="126"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
@@ -306,20 +306,20 @@
                     <rect key="frame" x="0.0" y="325" width="320" height="135"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" tag="100" contentMode="scaleToFill" image="callbar_left_padding.png" id="146" userLabel="leftPadding">
+                        <imageView hidden="YES" userInteractionEnabled="NO" tag="100" contentMode="scaleToFill" image="callbar_left_padding.png" id="146" userLabel="leftPadding">
                             <rect key="frame" x="-44" y="-8" width="44" height="90"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </imageView>
-                        <imageView userInteractionEnabled="NO" tag="101" contentMode="scaleToFill" image="callbar_right_padding.png" id="145" userLabel="rightPadding">
+                        <imageView hidden="YES" userInteractionEnabled="NO" tag="101" contentMode="scaleToFill" image="callbar_right_padding.png" id="145" userLabel="rightPadding">
                             <rect key="frame" x="320" y="-8" width="44" height="90"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </imageView>
-                        <view tag="28" contentMode="scaleToFill" id="142" userLabel="background">
+                        <view hidden="YES" tag="28" contentMode="scaleToFill" id="142" userLabel="background">
                             <rect key="frame" x="0.0" y="135" width="320" height="2000"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" red="0.14901960780000001" green="0.1647058824" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
                         </view>
-                        <button opaque="NO" tag="19" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="12" userLabel="videoButton" customClass="UIVideoButton">
+                        <button hidden="YES" opaque="NO" tag="19" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="12" userLabel="videoButton" customClass="UIVideoButton">
                             <rect key="frame" x="0.0" y="0.0" width="80" height="67"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <accessibility key="accessibilityConfiguration" label="Video"/>
@@ -346,7 +346,7 @@
                             <rect key="frame" x="20" y="20" width="37" height="37"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </activityIndicatorView>
-                        <button opaque="NO" tag="21" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="11" userLabel="microButton" customClass="UIMicroButton">
+                        <button hidden="YES" opaque="NO" tag="21" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="11" userLabel="microButton" customClass="UIMicroButton">
                             <rect key="frame" x="80" y="0.0" width="80" height="67"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <accessibility key="accessibilityConfiguration" label="Micro"/>
@@ -366,7 +366,7 @@
                                 <color key="titleColor" red="0.81176470590000005" green="0.29803921570000003" blue="0.16078431369999999" alpha="1" colorSpace="deviceRGB"/>
                             </state>
                         </button>
-                        <button opaque="NO" tag="22" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="9" userLabel="speakerButton" customClass="UISpeakerButton">
+                        <button hidden="YES" opaque="NO" tag="22" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="9" userLabel="speakerButton" customClass="UISpeakerButton">
                             <rect key="frame" x="160" y="0.0" width="80" height="67"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <accessibility key="accessibilityConfiguration" label="Speaker"/>
@@ -386,7 +386,7 @@
                                 <color key="titleColor" red="0.81176470590000005" green="0.29803921570000003" blue="0.16078431369999999" alpha="1" colorSpace="deviceRGB"/>
                             </state>
                         </button>
-                        <button opaque="NO" tag="29" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="164" userLabel="routesButton" customClass="UIToggleButton">
+                        <button hidden="YES" opaque="NO" tag="29" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="164" userLabel="routesButton" customClass="UIToggleButton">
                             <rect key="frame" x="160" y="0.0" width="80" height="67"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <accessibility key="accessibilityConfiguration" label="Route"/>
@@ -409,7 +409,7 @@
                                 <action selector="onRoutesClick:" destination="-1" eventType="touchUpInside" id="211"/>
                             </connections>
                         </button>
-                        <button opaque="NO" tag="23" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="10" userLabel="optionsButton" customClass="UIToggleButton">
+                        <button hidden="YES" opaque="NO" tag="23" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="10" userLabel="optionsButton" customClass="UIToggleButton">
                             <rect key="frame" x="240" y="0.0" width="80" height="67"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <accessibility key="accessibilityConfiguration" label="Options"/>
@@ -432,7 +432,7 @@
                                 <action selector="onOptionsClick:" destination="-1" eventType="touchUpInside" id="20"/>
                             </connections>
                         </button>
-                        <button opaque="NO" tag="24" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="8" userLabel="pauseButton" customClass="UIPauseButton">
+                        <button hidden="YES" opaque="NO" tag="24" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="8" userLabel="pauseButton" customClass="UIPauseButton">
                             <rect key="frame" x="0.0" y="67" width="105" height="68"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
                             <accessibility key="accessibilityConfiguration" label="Pause"/>
@@ -457,7 +457,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" tag="26" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="7" userLabel="hangupButton" customClass="UIHangUpButton">
-                            <rect key="frame" x="105" y="67" width="111" height="68"/>
+                            <rect key="frame" x="49" y="67" width="111" height="68"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
                             <accessibility key="accessibilityConfiguration" label="Hangup"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
@@ -467,7 +467,7 @@
                             <state key="highlighted" image="hangup_over.png"/>
                         </button>
                         <button opaque="NO" tag="27" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" id="6" userLabel="dialerButton" customClass="UIToggleButton">
-                            <rect key="frame" x="215" y="67" width="105" height="68"/>
+                            <rect key="frame" x="160" y="67" width="105" height="68"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
                             <accessibility key="accessibilityConfiguration" label="Back"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
@@ -920,14 +920,14 @@
         <image name="dialer_alt_back_default.png" width="209" height="136"/>
         <image name="dialer_alt_back_default_landscape.png" width="130" height="163"/>
         <image name="dialer_alt_background.png" width="530" height="526"/>
-        <image name="dialer_alt_default.png" width="209" height="136"/>
+        <image name="dialer_alt_default.png" width="128" height="125"/>
         <image name="dialer_alt_default_landscape.png" width="130" height="163"/>
         <image name="dialer_alt_disabled.png" width="209" height="136"/>
-        <image name="dialer_alt_over.png" width="209" height="136"/>
+        <image name="dialer_alt_over.png" width="128" height="125"/>
         <image name="dialer_alt_over_landscape.png" width="130" height="163"/>
-        <image name="hangup_default.png" width="222" height="136"/>
+        <image name="hangup_default.png" width="60" height="60"/>
         <image name="hangup_default_landscape.png" width="180" height="163"/>
-        <image name="hangup_over.png" width="222" height="136"/>
+        <image name="hangup_over.png" width="60" height="60"/>
         <image name="hangup_over_landscape.png" width="180" height="163"/>
         <image name="micro_off_default.png" width="160" height="134"/>
         <image name="micro_off_default_landscape.png" width="130" height="163"/>
