--- a/Classes/en.lproj/ChatRoomViewController.xib
+++ b/Classes/en.lproj/ChatRoomViewController.xib
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
-        <deployment defaultVersion="1072" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3746"/>
     </dependencies>
     <objects>
@@ -12,6 +11,7 @@
                 <outlet property="buttonEdit" destination="100" id="s9q-PU-agh"/>
                 <outlet property="cancelTransferButton" destination="75" id="85"/>
                 <outlet property="chatView" destination="49" id="54"/>
+                <outlet property="emoticonView" destination="TLX-Gi-NBb" id="eSw-3Q-xDl"/>
                 <outlet property="headerView" destination="39" id="45"/>
                 <outlet property="imageTransferProgressBar" destination="74" id="79"/>
                 <outlet property="messageBackgroundImage" destination="66" id="90"/>
@@ -162,6 +162,11 @@
                                 </view>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        </view>
+                        <view contentMode="scaleToFill" id="TLX-Gi-NBb" userLabel="emoticonsView">
+                            <rect key="frame" x="0.0" y="253" width="320" height="120"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         </view>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
